fix small bug on cit-hepth

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,12 @@
-gensim==3.8.3
-joblib==0.16.0
-Keras==2.4.3
-lightgbm==2.3.1
-matplotlib==3.3.0
+networkx==2.3
+tqdm==4.36.1
+requests==2.22.0
+numpy==1.17.2
+matplotlib==3.1.1
+pandas==0.25.1
 munkres==1.1.2
-networkx==2.4
-numpy==1.19.0
-pandas==1.0.5
-requests==2.24.0
-scikit-learn==0.23.1
 scipy==1.4.1
-seaborn==0.10.1
-tensorflow==2.2.0
-tqdm==4.48.0
-
-torch~=1.5.1
+lightgbm==2.3.1
+node2vec==0.3.2
+scikit_learn==0.23.2
+torch==1.6.0
