--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-pandas==0.25.1
-matplotlib==3.1.1
+pandas~=1.0.5
+matplotlib~=3.3.0
 munkres==1.1.2
-numpy==1.17.2
-requests==2.22.0
+numpy~=1.19.0
+requests~=2.24.0
 scipy==1.4.1
-networkx==2.3
+networkx~=2.4
 lightgbm==2.3.1
-tqdm==4.36.1
+tqdm~=4.48.0
 node2vec==0.3.2
-scikit_learn==0.23.2
-torch==1.6.0
+torch~=1.5.1
+
+scikit-learn~=0.23.1
+gensim~=3.8.3
